--- a/index.html
+++ b/index.html
@@ -539,13 +539,11 @@
 
     </div>
 </div>
-<script src="vendor/jquery-2.1.4.min.js"></script>
-<script src="https://cdn.rawgit.com/Mikhus/canvas-gauges/gh-pages/download/2.1.4/radial/gauge.min.js"></script>
-<script src="vendor/Chart.js"></script>
+<script type="text/javascript" src="vendor/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/Mikhus/canvas-gauges/gh-pages/download/2.1.4/radial/gauge.min.js"></script>
+<script type="text/javascript" src="vendor/Chart.js"></script>
 <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
 <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
-
-
 
 
 <script type="text/javascript">
